--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://emapi.kostarsf.space",
   "eslintConfig": {
     "extends": [
       "react-app"
